# NaoTH2025

./: .gitignore  CMakeLists.txt  README.md
LolaAdaptor/: LolaAdaptor.cpp  LolaAdaptor.h  main.cpp
Soccer/Representations/Infrastructure/: ButtonData.cpp  ButtonData.h  JointData.cpp  JointData.h  LEDData.cpp  LEDData.h
make/: build_nao_robot.sh
tools/: Lola.h  LolaDataConverter.h  NaoInfoTools.h  SharedMemory.h  SharedMemoryIO.h
